--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,5 @@
 # Cloudflare Pages configuration
 name = "2025-portfolio"
 compatibility_date = "2025-03-26"
-
-[build]
-command = "bun run build"
+compatibility_flags = ["nodejs_compat"]
+pages_build_output_dir = ".output"
