--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "allowJs": true,
     "noEmit": true,
     "strict": true,
-    "types": ["vinxi/types/client"],
+    "types": ["vinxi/types/client", "@cloudflare/workers-types"],
     "isolatedModules": true,
     "paths": {
       "~/*": ["./src/*"]
