--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.15.2",
     "@solidjs/start": "^1.0.10",
     "@unocss/reset": "^0.65.3",
